[package]
name = "hype"
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"

exclude = [
  ".cargo-huskey/*",
  ".tool/*",
  "Makefile",
  ".env",
  ".clippy.toml",
  ".rustfmt.toml",
]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

[badges]
gitlab = { repository = "grauwoelfchen/hype", branch = "trunk" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
